# bl-fixed-income

./: .gitignore  Makefile  README.md  forecast_analysis.md  generate_master_returns.py  generate_ml_returns.py  generate_mu.py  generate_weights.py  main.py  mu_bl.parquet  optimal_weights.parquet  pyproject.toml  returns.parquet  returns_ml.parquet  settings.toml
.github/workflows/: ci.yml
configs/: data_decisions.md  targets_analysis.md
dashboard/: app.py
data/processed/: comparison_baselines.csv  features.parquet  forecasts_gbm.parquet  forecasts_lstm.parquet  forecasts_ridge.parquet  forecasts_transformer.parquet  panel_semanal.parquet
data/raw/: precios_crudos.csv
src/bl/: omega.py  optimize.py  posterior.py  prior.py
src/bl_fixed_income/: allocator.py  analytics.py  data_loader.py  main.py
src/data/: clean.py  download.py
src/features/: build_features.py  returns.py  targets.py
src/models/: equilibrium.py  gbm.py  generate_gbm_forecasts.py  generate_lstm_forecasts.py  generate_ridge_forecasts.py  generate_transformer_forecasts.py  lstm.py  metrics.py  ridge.py  rolling.py  transformer.py  views.py
src/portfolio/: baselines.py  weights.py
src/validation/: evaluate_models.py
src/visualization/: eda.py
tests/: test_analytics.py  test_baselines.py  test_bl.py  test_data.py  test_gbm.py  test_leakage.py  test_lstm.py  test_optimize.py  test_portfolio_weights.py  test_ridge.py  test_rolling.py  test_transformer.py
