[project]
name = "bl-fixed-income"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]